tekton/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  midway-demo
  namespace: fe-tekton
  labels:
    app:  midway-demo
spec:
  selector:
    matchLabels:
      app: midway-demo
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  midway-demo
    spec:
      imagePullSecrets:
        - name: secret-dockercfg
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  midway-demo
        image: registry.cn-beijing.aliyuncs.com/hzz-harbor/midway-demo:56d1236ce26c7403675303a4b25d0c8d0cb2da62
        # image: midway-demo:v1
        resources:
          requests:
            cpu: 0.5
            memory: 500Mi
          limits:
            cpu: 1
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 7001
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 7001
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  7001
          name:  midway-demo1
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always
