tekton/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: midway-demo
  namespace: fe-tekton
spec:
  selector:
    app: midway-demo
  type: ClusterIp
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: midway-demo
    protocol: TCP
    port: 7001
    targetPort: 7001
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort: 30001
