tekton/ing.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: midway-demo
  namespace: fe-tekton
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /midway(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: midway-demo
            port:
              number: 7001
